--- a/.github/workflows/gh_build.yml
+++ b/.github/workflows/gh_build.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.ref }}
-      cancel-in-progress: ${{ github.event_name == 'pull_request' || github.ref_name != github.event.repository.default_branch }}
+      cancel-in-progress: ${{ github.event_name == 'pull_request' || github.ref_name != github.event.repository.default_branch || github.ref_type != 'dev' }}
     permissions:
       contents: read
       packages: write
