--- a/.github/workflows/gh_build.yml
+++ b/.github/workflows/gh_build.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.ref }}
-      cancel-in-progress: ${{ github.event_name == 'pull_request' || github.ref_name != github.event.repository.default_branch || github.ref_type != 'dev' }}
+      cancel-in-progress: ${{ github.event_name == 'pull_request' || github.ref_name != github.event.repository.default_branch || github.ref_name != 'dev' }}
     permissions:
       contents: read
       packages: write
@@ -53,7 +53,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up QEMU
-        if: inputs.build-arm && github.ref_name == github.event.repository.default_branch
+        if: inputs.build-arm && ( github.ref_name == github.event.repository.default_branch || github.ref_name == 'dev' )
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx (QEMU)
@@ -84,7 +84,7 @@ jobs:
           file: ${{ inputs.build-file || 'Dockerfile' }}
           context: ${{ inputs.build-context || '.'}}
           target: ${{ inputs.build-target }}
-          push: ${{ (github.event_name == 'push' && (github.ref_name == github.event.repository.default_branch || github.ref_type == 'tag')) || github.event_name == 'pull_request' }}
+          push: ${{ (github.event_name == 'push' && (github.ref_name == github.event.repository.default_branch || github.ref_name == 'dev' || github.ref_type == 'tag')) || github.event_name == 'pull_request' }}
           platforms: ${{ inputs.platforms && inputs.platforms || (inputs.build-arm && github.ref_name == github.event.repository.default_branch && 'linux/amd64,linux/arm64' || 'linux/amd64') }}
           provenance: false
           tags: ${{ steps.meta.outputs.tags }}
