--- a/.github/workflows/main_deploy.yml
+++ b/.github/workflows/main_deploy.yml
@@ -42,6 +42,9 @@ on:
       aws-secret-key:
         description: "The AWS secret access key"
         required: true
+      function-admin-api-key:
+        description: "The API key for the Lambda Feedback backend function admin API"
+        required: true
       build-secrets:
         description: "The Docker secrets to use for the build"
         required: false
@@ -118,6 +121,7 @@ jobs:
     secrets:
       aws-access-key-id: ${{ secrets.aws-access-key-id }}
       aws-secret-key: ${{ secrets.aws-secret-key }}
+      function-admin-api-key: ${{ secrets.function-admin-api-key }}
 
   approval_job:
     needs: [staging-build, staging-deploy]
@@ -176,3 +180,4 @@ jobs:
     secrets:
       aws-access-key-id: ${{ secrets.aws-access-key-id }}
       aws-secret-key: ${{ secrets.aws-secret-key }}
+      function-admin-api-key: ${{ secrets.function-admin-api-key }}
