--- a/.github/workflows/main_deploy.yml
+++ b/.github/workflows/main_deploy.yml
@@ -103,7 +103,7 @@ jobs:
       build-target: ${{ inputs.build-target }}
       build-args: ${{ inputs.build-args }}
       build-platforms: ${{ inputs.build-platforms }}
-      build-push: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) }}
+      build-push: ${{ github.event_name == 'workflow_run' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) }}
     secrets:
       aws-access-key-id: ${{ secrets.aws-access-key-id }}
       aws-secret-key: ${{ secrets.aws-secret-key }}
@@ -111,7 +111,7 @@ jobs:
 
   staging-deploy:
     uses: ./.github/workflows/lambda_deploy.yml
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch)
+    if: github.event_name == 'workflow_run' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch)
     needs: [setup, staging-build]
     with:
       environment: staging
@@ -162,7 +162,7 @@ jobs:
       build-target: ${{ inputs.build-target }}
       build-args: ${{ inputs.build-args }}
       build-platforms: ${{ inputs.build-platforms }}
-      build-push: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) }}
+      build-push: ${{ github.event_name == 'workflow_run' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) }}
     secrets:
       aws-access-key-id: ${{ secrets.aws-access-key-id }}
       aws-secret-key: ${{ secrets.aws-secret-key }}
@@ -170,7 +170,7 @@ jobs:
 
   prod-deploy:
     uses: ./.github/workflows/lambda_deploy.yml
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch)
+    if: github.event_name == 'workflow_run' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch)
     needs: [setup, prod-build]
     with:
       environment: prod
