--- a/.github/workflows/main_deploy.yml
+++ b/.github/workflows/main_deploy.yml
@@ -128,12 +128,6 @@ jobs:
     name: Waiting for approval
     runs-on: ubuntu-latest
     steps:
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.APP_SECRET }}
       - name: Approve Production Deployment
         uses: trstringer/manual-approval@v1
         with:
@@ -141,7 +135,7 @@ jobs:
           # approvers: approvers
           minimum-approvals: 1
           timeout-minutes: 10
-          secret: ${{ steps.generate_token.outputs.token }}
+          secret: ${{ github.TOKEN }}
           issue-title: Approve Production Deployment
           issue-body: Approve production deployment for the Chatbot Module
           exclude-workflow-initiator-as-approver: false
