--- a/.github/workflows/main_deploy.yml
+++ b/.github/workflows/main_deploy.yml
@@ -63,6 +63,7 @@ jobs:
       contents: read
       packages: write
       id-token: write
+      issues: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
