--- a/.github/workflows/main_deploy.yml
+++ b/.github/workflows/main_deploy.yml
@@ -119,7 +119,7 @@ jobs:
 
   staging-deploy:
     uses: ./.github/workflows/lambda_deploy.yml
-    if: ${{ github.event_name == 'workflow_run' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) }}
+    if: ${{ github.event_name == 'workflow_run' || github.event == 'workflow_dispatch' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) }}
     needs: [setup, staging-build]
     with:
       environment: staging
@@ -172,7 +172,7 @@ jobs:
 
   prod-deploy:
     uses: ./.github/workflows/lambda_deploy.yml
-    if: ${{ github.event_name == 'workflow_run' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) }}
+    if: ${{ github.event_name == 'workflow_run' || github.event == 'workflow_dispatch' || (github.event_name == 'push' && github.ref_name == github.event.repository.default_branch) }}
     needs: [setup, prod-build]
     with:
       environment: prod
