fix: env vars argument type

--- a/.github/workflows/lambda_deploy.yml
+++ b/.github/workflows/lambda_deploy.yml
@@ -75,6 +75,6 @@ jobs:
           \"apiKey\": \"$API_KEY\",
           \"dockerImageUri\": \"$IMAGE_NAME\",
           \"functionName\": \"$FUNCTION_NAME\",
-          \"arguments\": \"$ENVIRONMENT_VARIABLES\"
+          \"arguments\": $ENVIRONMENT_VARIABLES
             }"
           fi
